# openai

./: README.md  pyproject.toml
openai/: chatgpt_api.py
