[tool.poetry]
name = "openai"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.13.2"
requests = "^2.31.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
